--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
   branch: main
+  proxy_url: http://localhost:8081/api/v1
 
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
